--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -83,7 +83,7 @@
                 </div>
             </section>
 
-            <!-- Latest new section -->
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
