--- a/0x00-html_advanced/32-styleguide.html
+++ b/0x00-html_advanced/32-styleguide.html
@@ -75,13 +75,19 @@
 
         <!-- Horizontal rule -->
         <section>
-            <header><h2>Horizontal rule</h2></header>
-            <div><hr></div>
+            <header>
+                <h2>Horizontal rule</h2>
+            </header>
+            <div>
+                <hr>
+            </div>
         </section>
 
         <!-- Blockquotes -->
         <section>
-            <header><h2>Blockquotes</h2></header>
+            <header>
+                <h2>Blockquotes</h2>
+            </header>
             <div>
                 <h3>Inline quote</h3>
                 <q>Stay hungry. Stay foolish.</q>
@@ -89,37 +95,45 @@
             <div>
                 <h3>Blockquote</h3>
                 <blockquote>
-                    <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand
-                    culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is
-                    the level that things could be at.
-                    <cite>Kanye West, Musician</cite>
+                    <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the
+                        answers. I understand
+                        culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities,
+                        to show people, this is
+                        the level that things could be at.
+                        <cite>Kanye West, Musician</cite>
                     </p>
                 </blockquote>
-            </div>  
+            </div>
         </section>
 
         <!-- Typography -->
         <section>
-            <header><h2>Typography</h2></header>
+            <header>
+                <h2>Typography</h2>
+            </header>
             <div>
                 <address>
                     320 Stewart Avenue, Unit 12 <br>
                     New York City NY 10001
                 </address>
-                <div>
-                    <pre>
-                        <code>
-                            <h2>My title</h2>
-                            <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
-                         </code>
-                    </pre>
-                </div>
-                <div>
-                    <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean
-                    condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed
-                    metus.</p>
-                </div>
             </div>
+            <div>
+                <pre>
+                    <code>
+                        <h2>My title</h2>
+                        <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
+                    </code>
+                </pre>
+            </div>
+            <div>
+                <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget
+                    dapibus erat finibus sed. Aenean
+                    condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed
+                    sapien ultricies <mark>highlighted</mark> ut sed
+                    metus.
+                </p>
+            </div>
+
         </section>
     </main>
     <footer></footer>
