--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -28,7 +28,7 @@
                 <article><h3>Web Development</h3></article>
                 <article><h3>Personal Brand</h3></article>
             </section>
-            <section><h2>About us</h2>
+            <section><h2>About Us</h2>
                 <h3>Who are we</h3>
                 <h3>Our culture</h3>
                 <h3>How we work</h3>
