--- a/0x00-html_advanced/14-index.html
+++ b/0x00-html_advanced/14-index.html
@@ -34,7 +34,7 @@
                 <article><h3>Personal Brand</h3></article>
             </section>
             <section>
-                <h2>About us</h2>
+                <h2>About Us</h2>
                 <p>Everything about us</p>
                 <h3>Who are we</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium
