Add link in logo

--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -68,7 +68,7 @@
             <section>
                 <div>
                     <header>
-                        <h2>About us</h2>
+                        <h2>About Us</h2>
                         <p>Everything about us</p>
                     </header>
                     <div>
@@ -85,7 +85,7 @@
                 </div>
             </section>
 
-            <!-- Latest new section -->
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
