--- a/0x00-html_advanced/21-index.html
+++ b/0x00-html_advanced/21-index.html
@@ -21,7 +21,7 @@
                     <a href="#services">Services</a>
                     <a href="#works">Works</a>
                     <a href="#about">About</a>
-                    <a href="#latest_news">Latest_news</a>
+                    <a href="#latest_news">Latest news</a>
                     <a href="#testimonials">Testimonials</a>
                     <a href="#contact">Contact</a>
                 </nav>
@@ -76,7 +76,7 @@
             <section>
                 <div>
                     <header>
-                        <h2>About us</h2>
+                        <h2>About Us</h2>
                         <p>Everything about us</p>
                     </header>
                     <div>
@@ -93,7 +93,7 @@
                 </div>
             </section>
 
-            <!-- Latest new section -->
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
