--- a/0x00-html_advanced/24-index.html
+++ b/0x00-html_advanced/24-index.html
@@ -79,7 +79,7 @@
             <section>
                 <div>
                     <header>
-                        <h2>About us</h2>
+                        <h2>About Us</h2>
                         <p>Everything about us</p>
                     </header>
                     <div>
@@ -97,7 +97,7 @@
                 </div>
             </section>
 
-            <!-- Latest new section -->
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
