--- a/0x00-html_advanced/27-index.html
+++ b/0x00-html_advanced/27-index.html
@@ -22,7 +22,7 @@
                         <li><a href="#services">Services</a></li>
                         <li><a href="#works">Works</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="#latest_news">Latest_news</a></li>
+                        <li><a href="#latest_news">Latest news</a></li>
                         <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -79,7 +79,7 @@
             <section>
                 <div>
                     <header>
-                        <h2>About us</h2>
+                        <h2>About Us</h2>
                         <p>Everything about us</p>
                     </header>
                     <div>
@@ -97,7 +97,7 @@
                 </div>
             </section>
 
-            <!-- Latest new section -->
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
