--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -171,18 +171,21 @@
         <!-- Details -->
         <section>
             <header><h2>Details</h2></header>
-            <div>
-                <h3>Default</h3>
-                <details>
-                    <summary>Show/Hide me</summary>
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                </details>
+            <section>
+                <header><h2>Details</h2></header>
                 <div>
-                    <h3>Open</h3>
-                    <summary>Always open</summary>
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                    <h3>Default</h3>
+                    <details>
+                        <summary>Show/Hide me</summary>
+                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                    </details>
+                    <div>
+                        <h3>Open</h3>
+                        <summary>Always open</summary>
+                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer></footer>
