Replace text logo with image logo

--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -14,7 +14,7 @@
         <header>
             <div>
                 <div>
-                    <a href="/"><img src="logo-black.png" alt="Techium logo" width="160" height="40"></a>
+                    <a href="/"><span><img src="logo-black.png" alt="Techium logo" width="160" height="40"></span></a>
                 </div>
                 <nav>
                     <ul>
@@ -181,7 +181,7 @@
 
         <!-- Footer -->
         <footer>
-            <a href="/"><img src="logo-black.png" alt="Techium logo" width="160" height="40"></a>
+            <a href="/"><span><img src="logo-black.png" alt="Techium logo" width="160" height="40"></span></a>
             <address> 
                 234 Washington Street <br>
                 Urbana, Illinois
