--- a/0x04-flexbox/3-index.html
+++ b/0x04-flexbox/3-index.html
@@ -86,9 +86,21 @@
                         </li>
                     </ul>
 
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li class="col-1-3">
+                        <div class="card-services">
+                            <h3 class="card-title"><a href="#">UX Design</a></h3>
+                        </div>
+                    </li>
+                    <li class="col-1-3">
+                        <div class="card-services">
+                            <h3 class="card-title"><a href="#">Web Development</a></h3>
+                        </div>
+                    </li>
+                    <li class="col-1-3">
+                        <div class="card-services">
+                            <h3 class="card-title"><a href="#">Social Media</a></h3>
+                        </div>
+                    </li>
                 </div>
             </div>
         </section>
