Create labels and input container [Fix paragraph inside the header]

--- a/0x05-form/03-article.html
+++ b/0x05-form/03-article.html
@@ -177,7 +177,7 @@
                         <h2 class="section-title">Leave a comment</h2>
                         <p>All fields are required.</p>
                     </header>
-                    <form action="#" method="POST">
+                    <form action="#" method="post">
                         <fieldset>
                             <legend class="visually-hidden">Your personal information</legend>
                             <div class="form-group col-1-2">
@@ -186,12 +186,14 @@
                                     <span class="form-field-container"></span>
                                 </div>
                             </div>
+
                             <div class="form-group col-1-2">
                                 <label for="your-last-name">Last Name</label>
                                 <div class="form-field">
                                     <span class="form-field-container"></span>
                                 </div>
                             </div>
+
                             <div class="form-group col-2-3">
                                 <label for="your-email">Email</label>
                                 <div class="form-field">
@@ -199,6 +201,7 @@
                                 </div>
                             </div>                            
                         </fieldset>
+
                         <fieldset>
                             <legend class="visually-hidden">Your comment</legend>
                             <div class="form-group col-2-3">
@@ -207,12 +210,14 @@
                                     <span class="form-field-container"></span>
                                 </div>
                             </div>
+
                             <div class="form-group col-2-3">
                                 <label for="your-comment">Comment</label>
                                 <div class="form-field">
                                     <span class="form-field-container"></span>
                                 </div>
                             </div>
+                            
                             <div class="form-group">
                                 <button class="button button-primary">Post my comment</button>
                             </div>
