--- a/0x05-form/05-article.html
+++ b/0x05-form/05-article.html
@@ -186,7 +186,8 @@
                                     <span class="form-field-container">
                                         <input type="text" name="your-first-name" id="your-first-name" placeholder="e.g. Mike" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on" accesskey="f" required>
                                         <i class="form-field-icon"></i>
-                                    </span><p class="form-help">First name should be at least 3 characters and only contains letters</p>
+                                    </span>
+                                    <p class="form-help">First name should be at least 3 characters and only contains letters</p>
                                 </div>
                             </div>
 
@@ -195,7 +196,8 @@
                                 <div class="form-field">
                                     <span class="form-field-container">
                                         <input type="text" name="your-last-name" id="your-last-name" placeholder="e.g. Smith" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on" accesskey="l" required>
-                                    </span><p class="form-help">Last name should be at least 3 characters and only contains letters</p>
+                                    </span>
+                                    <p class="form-help">Last name should be at least 3 characters and only contains letters</p>
                                 </div>
                             </div>
 
@@ -217,7 +219,8 @@
                                 <div class="form-field">
                                     <span class="form-field-container">
                                         <input type="text" name="your-title" id="your-title" placeholder="e.g. I loved that article" pattern="[A-Za-zÀ-ž\s]{4,}" maxlength="75" autocomplete="on" accesskey="t" required>
-                                    </span><p class="form-help">Title should be at least 4 characters and only contains letters</p>
+                                    </span>
+                                    <p class="form-help">Title should be at least 4 characters and only contains letters</p>
                                 </div>
                             </div>
 
@@ -226,7 +229,8 @@
                                 <div class="form-field">
                                     <span class="form-field-container">
                                         <textarea name="your-comment" id="your-comment"  placeholder="Write your comment here" minlength="10" accesskey="c" cols="30" rows="6" required></textarea>
-                                    </span><p class="form-help">Comment should be at least 10 characters</p>
+                                    </span>
+                                    <p class="form-help">Comment should be at least 10 characters</p>
                                 </div>
                             </div>
 
