Create the mobile icon and hide the menu

--- a/0x06-responsive_design/04-index.html
+++ b/0x06-responsive_design/04-index.html
@@ -22,7 +22,9 @@
                     </a>
                 </div>
                 <input type="checkbox" class="menu-btn" id="menu-btn">
-                <label for="menu-btn" class="menu-icon"></label>
+                <label for="menu-btn" class="menu-icon">
+                    <span class="navicon"></span>
+                </label>
                 <nav class="navbar-menu">
                     <ul class="nav">
                         <li class="nav-item">
