--- a/0x07-accessibility/fix-a11y/07-index.html
+++ b/0x07-accessibility/fix-a11y/07-index.html
@@ -171,10 +171,9 @@
                         <p>Stay updated with our latest trends</p>
                         <form action="#" method="post">
                             <div class="input-group">
-                                <label class="visually-hidden" for="email">
+                                <label class="visually-hidden" for="email"></label>
                                 <input class="form-control" id="email" type="email" name="email" autocomplete="email" required aria-required="true">
                                 <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
-                                </label>
                             </div>
                         </form>
                     </div>
