Fix list elements

--- a/0x07-accessibility/fix-a11y/10-index.html
+++ b/0x07-accessibility/fix-a11y/10-index.html
@@ -16,13 +16,13 @@
                 <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
                 <nav class="nav">
                     <ul>
-                        <i><a href="#">Home</a></i>
-                        <i><a href="#">About</a></i>
-                        <i><a href="#">Services</a></i>
-                        <i><a href="#">Portfolio</a></i>
-                        <i><a href="#">Pricing</a></i>
-                        <i><a href="#">Pages</a></i>
-                        <i><a href="#">Contact</a></i>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Pages</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
             </div>
