Add table of chemical elements

--- a/0x0A-Bootstrap/2-index.html
+++ b/0x0A-Bootstrap/2-index.html
@@ -34,8 +34,7 @@
                 <h4 class="alert-heading">List of chemical elements</h4>
                 <p>This is a list of the 5 first chemical elements which have been identified as of 2019.</p>
                 <hr>
-                <p class="mb-0">A popular visualization of all 118 elements is <a href="https://en.wikipedia.org/wiki/Periodic_table">
-                    the periodic table of the elements</a>.</p>
+                <p class="mb-0">A popular visualization of all 118 elements is <a href="https://en.wikipedia.org/wiki/Periodic_table"> the periodic table of the elements</a>.</p>
             </div>
         </section>
 
