--- a/0x0A-Bootstrap/3-index.html
+++ b/0x0A-Bootstrap/3-index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container-lg p-5">
         <div class="row align-items-start">
-            <div class="card col-sm mt-4 mr-2 ml-2 p-0">
+            <div class="card col-sm mt-4 mx-3 p-0">
                 <div class="card-body p-0">
                     <div class="card-header h5">Coding</div>
                     <img src="https://via.placeholder.com/450x200" class="card-img-top" />
@@ -34,7 +34,7 @@
                     <div class="card-footer">40h</div>
                 </div>
             </div>
-            <div class="card col-sm mt-4 mr-2 ml-2 p-0">
+            <div class="card col-sm mt-4 mx-3 p-0">
                 <div class="card-body p-0">
                     <div class="card-header h5">Coding</div>
                     <img src="https://via.placeholder.com/450x200" class="card-img-top" />
@@ -49,7 +49,7 @@
                     <div class="card-footer">35h</div>
                 </div>
             </div>
-            <div class="card col-sm mt-4 mr-2 ml-2 p-0">
+            <div class="card col-sm mt-4 mx-3 p-0">
                 <div class="card-body p-0">
                     <div class="card-header h5">Coding</div>
                     <img src="https://via.placeholder.com/450x200" class="card-img-top" />
