Show/Hide - screen size

--- a/0x0A-Bootstrap/5-index.html
+++ b/0x0A-Bootstrap/5-index.html
@@ -17,7 +17,7 @@
 
     <div class="container-md d-flex justify-content-between bg-info text-light p-2 rounded">
         <div class="border-bottom border-right border-light p-2">Left</div>
-        <div class="border border-top-0 border-light p-2 shadow d-block d-sm-none d-md-block">Middle</div>
+        <div class="border border-top-0 border-light p-2 shadow d-none d-sm-none d-md-block">Middle</div>
         <div class="border-bottom border-left border-light p-2">Right</div>
     </div>
 
