--- a/0x0A-Bootstrap/1-index.html
+++ b/0x0A-Bootstrap/1-index.html
@@ -57,7 +57,7 @@
     <div class="row">
         <div class="col-md-2 p-2 bg-primary">Primary</div>
         <div class="col-md-2 p-2 offset-md-4 bg-success">Success</div>
-        <div class="col-md-2 p-2 offset-md-2 bg-success">Danger</div>
+        <div class="col-md-2 p-2 offset-md-2 bg-danger">Danger</div>
     </div>
 </body>
 
