Add table of chemical elements [Fix header class]

--- a/0x0A-Bootstrap/2-index.html
+++ b/0x0A-Bootstrap/2-index.html
@@ -13,16 +13,16 @@
 
 <body>
     <header class="border-bottom p-2 mb-3 bg-light">
-        <ul class="nav">
-            <li class="nav-item">
+        <ul class="nav d-flex mb-0">
+            <li class="nav-item list-inline-item mr-auto">
                 <a href="/">
                     <img class="rounded" src="https://via.placeholder.com/150x50" />
                 </a>
             </li>
-            <li class="nav-item ml-auto mt-auto mb-auto">
-                <a class="active btn btn-secondary mt-auto" href="#">Chemical elements</a>
+            <li class="nav-item align-self-center mt-auto mb-auto">
+                <a class="btn btn-secondary active mt-auto" href="#">Chemical elements</a>
             </li>
-            <li class="nav-item mt-auto mb-auto ml-2">
+            <li class="nav-item align-self-center mt-auto mb-auto ml-2">
                 <a class="btn btn-secondary" href="#">Profile</a>
             </li>
         </ul>
