Cards created [Fix cards class]

--- a/0x0A-Bootstrap/3-index.html
+++ b/0x0A-Bootstrap/3-index.html
@@ -20,12 +20,12 @@
 <body>
     <div class="container-lg p-5">
         <div class="row align-items-start">
-            <div class="card col-sm mt-4 mx-3 p-0">
-                <div class="card-body p-0">
+            <div class="col-sm mt-4 mx-3 p-0">
+                <div class="card p-0">
                     <div class="card-header h5">Coding</div>
                     <img src="https://via.placeholder.com/450x200" class="card-img-top" />
                     <div class="card-body">
-                        <h5 class="card-text">HTML</h5>
+                        <h5 class="card-title">HTML</h5>
                         <p class="card-text">Hypertext Markup Language (HTML) is the standard markup language
                             for documents designed to be displayed in a web browser.</p>
                         <button data-toggle="modal" data-target="#playModal" class="btn btn-danger">Play
@@ -34,12 +34,12 @@
                     <div class="card-footer">40h</div>
                 </div>
             </div>
-            <div class="card col-sm mt-4 mx-3 p-0">
-                <div class="card-body p-0">
+            <div class="col-sm mt-4 mx-3 p-0">
+                <div class="card p-0">
                     <div class="card-header h5">Coding</div>
                     <img src="https://via.placeholder.com/450x200" class="card-img-top" />
                     <div class="card-body">
-                        <h5 class="card-text">CSS</h5>
+                        <h5 class="card-title">CSS</h5>
                         <p class="card-text">Cascading Style Sheets (CSS) is a style sheet language used for
                             describing the presentation of a document written in a markup
                             language like HTML.</p>
@@ -49,12 +49,12 @@
                     <div class="card-footer">35h</div>
                 </div>
             </div>
-            <div class="card col-sm mt-4 mx-3 p-0">
-                <div class="card-body p-0">
+            <div class="col-sm mt-4 mx-3 p-0">
+                <div class="card p-0">
                     <div class="card-header h5">Coding</div>
                     <img src="https://via.placeholder.com/450x200" class="card-img-top" />
                     <div class="card-body">
-                        <h5 class="card-text">Javascript</h5>
+                        <h5 class="card-title">Javascript</h5>
                         <p class="card-text">JavaScript, often abbreviated as JS, is a programming language
                             that conforms to the ECMAScript specification.</p>
                         <button data-toggle="modal" data-target="#playModal" class="btn btn-danger">Play
