Bob Dylan [Fix roles]

--- a/0x0A-Bootstrap/4-index.html
+++ b/0x0A-Bootstrap/4-index.html
@@ -21,7 +21,7 @@
     <div class="container-lg bg-light p-3">
         <h1 class="mb-4 mt-4">Bob Dylan</h1>
 
-        <ul class="nav nav-tabs">
+        <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="introduction-tab" data-toggle="tab" href="#introduction" role="tab"
                     aria-controls="introduction" aria-selected="true">Introduction</a>
@@ -51,7 +51,7 @@
                 <ul class="list-group">
                     <li class="list-group-item ">
                         <a href="#" type="button" data-toggle="collapse" data-target="#one">Bob Dylan <em>(1962)</em></a>
-                        <div class="collapse" id="one">
+                        <div class="collapse" id="one" data-parent="#discography">
                             <p>
                                 Bob Dylan is the debut studio album by American singer-songwriter Bob Dylan, released on
                                 March 19, 1962 by Columbia Records. Produced by Columbia's legendary talent scout John
@@ -63,7 +63,7 @@
 
                     <li class="list-group-item">
                         <a href="#" type="button" data-toggle="collapse" data-target="#two">The Freewheelin' Bob Dylan <em>(1963)</em></a>
-                        <div class="collapse" id="two">
+                        <div class="collapse" id="two" data-parent="#discography">
                             <p>
                                 The Freewheelin' Bob Dylan is the second studio album by American singer-songwriter Bob
                                 Dylan, released on May 27, 1963 by Columbia Records. Whereas his self-titled debut album
@@ -81,7 +81,7 @@
 
                     <li class="list-group-item">
                         <a href="#" type="button" data-toggle="collapse" data-target="#three">The Times They Are a-Changin' <em>(1964)</em></a>
-                        <div class="collapse" id="three">
+                        <div class="collapse" id="three" data-parent="#discography">
                             <p>
                                 The Times They Are a-Changin' is the third studio album by American singer-songwriter
                                 Bob Dylan, released on January 13, 1964 by Columbia Records. Whereas his previous albums
@@ -97,7 +97,7 @@
 
                     <li class="list-group-item">
                         <a href="#" type="button" data-toggle="collapse" data-target="#four">Another Side of Bob Dylan <em>(1964)</em></a>
-                        <div class="collapse" id="four">
+                        <div class="collapse" id="four" data-parent="#discography">
                             <p>
                                 Another Side of Bob Dylan is the fourth studio album by American singer and songwriter
                                 Bob Dylan, released on August 8, 1964 by Columbia Records.
