--- a/0x0D-JQuery_advanced/2-index.html
+++ b/0x0D-JQuery_advanced/2-index.html
@@ -16,29 +16,30 @@
         <script type="application/javascript">
             $(document).ready(function() {               
                     function createFamilyTree() {
-                        $("body").append(`
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Firstname</th>
-                                    <th>Lastname</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Guillaume</td>
-                                    <td>Salva</td>
-                                </tr>
-                                <tr>
-                                    <td>Paulette</td>
-                                    <td>Salva</td>
-                                </tr>
-                                <tr>
-                                    <td>Antoine</td>
-                                    <td>Salva</td>
-                                </tr>
-                            </tbody>
-                        </table>`);
+                        let tab = $(`
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Firstname</th>
+                                        <th>Lastname</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Guillaume</td>
+                                        <td>Salva</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Paulette</td>
+                                        <td>Salva</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Antoine</td>
+                                        <td>Salva</td>
+                                    </tr>
+                                </tbody>
+                            </table>`);
+                        $("body").append(tab);
                     }               
                 createFamilyTree();
             });
