--- a/0x0D-JQuery_advanced/3-index.html
+++ b/0x0D-JQuery_advanced/3-index.html
@@ -18,24 +18,24 @@
                     function createFamilyTree() {
                         $("body").append(
                             $("<table>").append(
-                                $("<thead/>").append(
-                                    $("<tr/>").append(
-                                        $("<th/>").text("Firstname"),
-                                        $("<th/>").text("Lastname")
+                                $("<thead>").append(
+                                    $("<tr>").append(
+                                        $("<th>").text("Firstname"),
+                                        $("<th>").text("Lastname")
                                     )
                                 ),
                             $("<tbody>").append(
-                                $("<tr/>").append(
-                                    $("<td/>").text("Guillaume"),
-                                    $("<td/>").text("Salva")
+                                $("<tr>").append(
+                                    $("<td>").text("Guillaume"),
+                                    $("<td>").text("Salva")
                                 ),
-                                $("<tr/>").append(
-                                    $("<td/>").text("Paulette"),
-                                    $("<td/>").text("Salva")
+                                $("<tr>").append(
+                                    $("<td>").text("Paulette"),
+                                    $("<td>").text("Salva")
                                 ),
-                                $("<tr/>").append(
-                                    $("<td/>").text("Antoine"),
-                                    $("<td/>").text("Salva")
+                                $("<tr>").append(
+                                    $("<td>").text("Antoine"),
+                                    $("<td>").text("Salva")
                                 )
                             ),
 
