--- a/0x0D-JQuery_advanced/10-index.html
+++ b/0x0D-JQuery_advanced/10-index.html
@@ -11,7 +11,7 @@
             crossorigin="anonymous">
         </script>
         
-        <!-- Create a table HTML element with click and remove function -->
+        <!-- Get API -->
         <script type="application/javascript">
             $(document).ready(function () {
                 function addPostRow(data) {
