Delete cookie and mini application

--- a/0x0E-Cookies_local_storage/3-index.html
+++ b/0x0E-Cookies_local_storage/3-index.html
@@ -12,7 +12,7 @@
         <h2>Login to the website</h2>
         <input id="firstname" placeholder="Firstname">
         <input id="email" placeholder="Email">
-        <button id="btn1" onclick="setCookies()">Log me in</button>
+        <button onclick="setCookies()">Log me in</button>
     </div>
 
     <script type="application/javascript">
